// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing renders top and bottom spacing for large device (>1024) 1`] = `
<div
  className="eiIsxz"
/>
`;

exports[`Spacing renders top and bottom spacing for medium device (767-1023) 1`] = `
<div
  className="gJLBDe"
/>
`;

exports[`Spacing renders top and bottom spacing for small device (480-767) 1`] = `
<div
  className="getVer"
/>
`;

exports[`Spacing renders top and bottom spacing for xLarge device (>1440) 1`] = `
<div
  className="hBBuZv"
/>
`;

exports[`Spacing renders top and bottom spacing for xSmall device (320-479) 1`] = `
<div
  className="hQZfiH"
/>
`;
